# pause-menu-desktop-app

./: DISABLE_TEAMS_NOTIFICATIONS_MANUAL.md  PHASE_2.3_TEST_CHECKLIST.md  README.md  RESTART_SHELLEXPERIENCEHOST_GUIDE.md  TESTING.md  TESTING_SUMMARY.md  WINDOWS_INSTALLER_SETUP.md  fix-rebase.ps1  index.html  package-lock.json  package.json  server.js  setup-env.ps1  test-features.js  vite.config.ts  vitest.config.ts
letmesell-web/: BACKEND_INTEGRATION.md  README.md  package-lock.json  package.json
letmesell-web/src/: App.css  App.tsx  index.css
server/: N8N_INTEGRATION.md  PHASE4_STATUS.md  README.md  SMTP_CLIENT_REQUEST.md  SMTP_SETUP_GUIDE.md  STRIPE_INTEGRATION.md  TESTING_WITH_PAPERCUT.md  package-lock.json  package.json  server.js  setup-smtp.ps1
server/n8n-workflows/: N8N_SETUP_GUIDE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  app-installed.json  subscription-lifecycle.json  user-onboarding.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  calendar.rs  documents.rs  files.rs  focus.rs  gmail.rs  launch.rs  meeting.rs  mod.rs  overlay.rs  shortcuts.rs  upload.rs  windows.rs
src-tauri/src/commands/__tests__/: launch_test.rs
src-tauri/src/models/: action.rs  file.rs  gmail.rs  mod.rs  window.rs
src-tauri/src/services/: calendar_service.rs  file_tracker.rs  focus_service.rs  gmail_service.rs  magic_link_server.rs  mod.rs  multi_monitor.rs  oauth_server.rs  overlay_manager.rs  shortcut_manager.rs  window_tracker.rs
src-tauri/src/services/__tests__/: focus_service_test.rs
src-tauri/src/utils/: mod.rs  notification_suppression.rs  windows_api.rs
src-tauri/src/utils/__tests__/: mod_test.rs
src/components/: Dimmer.tsx  Overlay.tsx  SubscriptionHistoryModal.tsx
src/hooks/: useCalendar.ts  useFocus.ts  useShortcut.ts  useWindows.ts
src/services/: api.ts  auth.ts  (+1 more)
(+85 files in other folders)
