[package]
name = "pause-menu"
version = "0.1.0"
description = "Pause Menu - Productivity overlay application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pause_menu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
notify = "6.0"
oauth2 = { version = "4.4" }
url = "2.5"
keyring = "2.1"
base64 = "0.21"
rand = "0.8"
async-trait = "0.1"
urlencoding = "2.1"
dotenv = "0.15"
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "0.1"
bytes = "1.5"

